src/test/ui/match/non-exhaustive-defined-here.stderr
error[E0004]: non-exhaustive patterns: `B` and `C` not covered
  --> $DIR/non-exhaustive-defined-here.rs:26:11
   |
LL | / enum E {
LL | |
LL | |
LL | |
...  |
LL | |     B,
   | |     - not covered
...  |
LL | |     C
   | |     - not covered
...  |
LL | |
LL | | }
   | |_- `E` defined here
...
LL |       match e1 {
   |             ^^ patterns `B` and `C` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0005]: refutable pattern in local binding: `B` not covered
  --> $DIR/non-exhaustive-defined-here.rs:30:9
   |
LL | / enum E {
LL | |
LL | |
LL | |
...  |
LL | |
LL | | }
   | |_- `E` defined here
...
LL |       let E::A = e;
   |           ^^^^ pattern `B` not covered

error[E0004]: non-exhaustive patterns: `&B` and `&C` not covered
  --> $DIR/non-exhaustive-defined-here.rs:34:11
   |
LL | / enum E {
LL | |
LL | |
LL | |
...  |
LL | |     B,
   | |     - not covered
...  |
LL | |     C
   | |     - not covered
...  |
LL | |
LL | | }
   | |_- `E` defined here
...
LL |       match e {
   |             ^ patterns `&B` and `&C` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0005]: refutable pattern in local binding: `&B` not covered
  --> $DIR/non-exhaustive-defined-here.rs:38:9
   |
LL | / enum E {
LL | |
LL | |
LL | |
...  |
LL | |
LL | | }
   | |_- `E` defined here
...
LL |       let E::A = e;
   |           ^^^^ pattern `&B` not covered

error[E0004]: non-exhaustive patterns: `&&mut &B` and `&&mut &C` not covered
  --> $DIR/non-exhaustive-defined-here.rs:42:11
   |
LL | / enum E {
LL | |
LL | |
LL | |
...  |
LL | |     B,
   | |     - not covered
...  |
LL | |     C
   | |     - not covered
...  |
LL | |
LL | | }
   | |_- `E` defined here
...
LL |       match e {
   |             ^ patterns `&&mut &B` and `&&mut &C` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0005]: refutable pattern in local binding: `&&mut &B` not covered
  --> $DIR/non-exhaustive-defined-here.rs:46:9
   |
LL | / enum E {
LL | |
LL | |
LL | |
...  |
LL | |
LL | | }
   | |_- `E` defined here
...
LL |       let E::A = e;
   |           ^^^^ pattern `&&mut &B` not covered

error[E0004]: non-exhaustive patterns: `None` not covered
  --> $DIR/non-exhaustive-defined-here.rs:58:11
   |
LL | / enum Opt {
LL | |
LL | |
LL | |     Some(u8),
LL | |     None,
   | |     ---- not covered
LL | |
LL | | }
   | |_- `Opt` defined here
...
LL |       match e {
   |             ^ pattern `None` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0005]: refutable pattern in local binding: `None` not covered
  --> $DIR/non-exhaustive-defined-here.rs:62:9
   |
LL | / enum Opt {
LL | |
LL | |
LL | |     Some(u8),
LL | |     None,
LL | |
LL | | }
   | |_- `Opt` defined here
...
LL |       let Opt::Some(ref _x) = e;
   |           ^^^^^^^^^^^^^^^^^ pattern `None` not covered

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0004, E0005.
For more information about an error, try `rustc --explain E0004`.
